--- a/src/common/css/border.css
+++ b/src/common/css/border.css
@@ -1,18 +1,18 @@
-@svg 1px-border { 
+/* @svg 1px-border { 
     height: 2px; 
     @rect { 
         fill: var(--color, black); 
         width: 100%; 
         height: 50%; 
     } 
-}
+} */
 
 .border-1px { 
-    border-top: 1px solid transparent; 
-    border-image: svg(1px-border param(--color #bbb)) 2 2 stretch; 
+    border-top: 1px solid #eee; 
+    /* border-image: svg(1px-border param(--color #eee)) 2 2 stretch;  */
 }
 
 .border-1px-b {
-    border-bottom: 1px solid transparent; 
-    border-image: svg(1px-border param(--color #bbb)) 2 2 stretch; 
+    border-bottom: 1px solid #eee; 
+    /* border-image: svg(1px-border param(--color #eee)) 2 2 stretch; */
 }
